fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@ a:hover {
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding-top: 10px;
 }
 
 /* NavBar */
